--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <nav>
     <a href="./" aria-current="page">Home</a>
-    <a href="data-wonders.html">World Wonders Editor</a>
+    <a href="data-editor.html">Data Editor</a>
   </nav>
 
   <main>
