--- a/data-natural-wonders.html
+++ b/data-natural-wonders.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>CIV7 Tracker · World Wonders</title>
+  <title>CIV7 Tracker · Natural Wonders</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#001a33">
-  <meta name="description" content="Edit Civilization VII World Wonders data.">
-  <meta property="og:title" content="CIV7 Tracker · World Wonders">
-  <meta property="og:description" content="Maintain Civilization VII World Wonders data.">
-  <meta property="og:url" content="https://sjones321.github.io/civ7-tracker/data-wonders.html">
+  <meta name="description" content="Edit Civilization VII Natural Wonders data.">
+  <meta property="og:title" content="CIV7 Tracker · Natural Wonders">
+  <meta property="og:description" content="Maintain Civilization VII Natural Wonders data.">
+  <meta property="og:url" content="https://sjones321.github.io/civ7-tracker/data-natural-wonders.html">
   <meta property="og:image" content="https://sjones321.github.io/civ7-tracker/img/og-card.png">
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin:0; background:#f5f7fa; color:#102542; }
@@ -33,10 +33,10 @@
     form label { display:block; font-weight:600; margin-top:12px; }
     form small { display:block; margin-top:4px; color:#52606d; }
     form input[type="text"],
+    form input[type="number"],
     form textarea,
     form select { width:100%; padding:8px; border:1px solid #bcccdc; border-radius:4px; font-size:1rem; }
     form textarea { min-height:72px; }
-    .checkbox-label { display:flex; align-items:center; gap:8px; margin-top:12px; font-weight:600; }
     .form-actions { margin-top:16px; display:flex; gap:12px; flex-wrap:wrap; }
     button { cursor:pointer; border-radius:4px; border:1px solid transparent; padding:8px 14px; font-size:0.95rem; }
     button.primary { background:#0077cc; color:#fff; }
@@ -48,15 +48,13 @@
     .icon-display { display:inline-block; min-width:1.5rem; margin-right:8px; text-align:center; }
     .icon-display img { width:40px; height:40px; object-fit:contain; border:1px solid #bcccdc; border-radius:4px; padding:2px; background:#fff; }
     #wonder-icon-preview { margin-top:8px; min-height:60px; display:flex; align-items:center; justify-content:flex-start; }
-    #wonder-icon-preview img { max-width:72px; max-height:72px; border:1px solid #bcccdc; border-radius:4px; padding:4px; background:#fff; }
+    #wonder-icon-preview img { max-width:120px; max-height:120px; border:1px solid #bcccdc; border-radius:4px; padding:4px; background:#fff; }
     #wonder-icon-preview span { color:#52606d; }
-    .history-list { margin-top:12px; padding-left:20px; }
-    .history-list li { margin-bottom:4px; }
-    #log-owner { margin-top:8px; }
-    .data-tools textarea { margin-top:12px; width:100%; padding:8px; border:1px solid #bcccdc; border-radius:4px; font-family:monospace; font-size:0.9rem; background:#f8fafc; color:#102542; }
-    .ownership-summary { max-width:340px; }
     #new-wonder { margin-top:12px; }
-    /* Autocomplete dropdown styling */
+    .data-tools textarea { margin-top:12px; width:100%; padding:8px; border:1px solid #bcccdc; border-radius:4px; font-family:monospace; font-size:0.9rem; background:#f8fafc; color:#102542; }
+    .tile-inputs { display:flex; gap:16px; margin-top:8px; }
+    .tile-input-group { flex:1; }
+    .tile-input-group label { margin-top:0; }
     .autocomplete-dropdown { 
       position: absolute !important;
       background: #fff !important;
@@ -85,6 +83,7 @@
     @media (max-width: 768px) {
       header { flex-direction:column; align-items:flex-start; }
       nav { display:flex; flex-wrap:wrap; gap:12px; }
+      .tile-inputs { flex-direction:column; }
     }
   </style>
   <script>
@@ -134,148 +133,141 @@
   </header>
   <nav>
     <a href="./">Home</a>
-    <a href="data-wonders.html" aria-current="page">World Wonders Editor</a>
+    <a href="data-wonders.html">World Wonders Editor</a>
     <a href="data-leaders.html">Leaders Editor</a>
     <a href="data-civilizations.html">Civilizations Editor</a>
     <a href="data-tech-civics.html">Tech/Civics Editor</a>
-    <a href="data-natural-wonders.html">Natural Wonders Editor</a>
+    <a href="data-natural-wonders.html" aria-current="page">Natural Wonders Editor</a>
     <a href="data-mementos.html">Mementos Editor</a>
     <a href="data-social-policies.html">Social Policies Editor</a>
   </nav>
   <main>
-    <h1>World Wonders Data Editor</h1>
-    <p>Manage Civilization VII World Wonders locally in your browser. Changes are stored in <code>localStorage</code> and survive refreshes.</p>
+    <h1>Natural Wonders Data Editor</h1>
+    <p>Manage Civilization VII Natural Wonders. Track discovery, effects, and tile ownership across games.</p>
 
-    <section class="status-region" aria-live="polite" id="status-message" role="status" data-tone="info">Ready to add a new World Wonder.</section>
+    <section class="status-region" aria-live="polite" id="status-message" role="status" data-tone="info">Ready to add a new Natural Wonder.</section>
 
     <div class="layout">
       <section class="panel" aria-labelledby="wonders-list-heading">
-        <h2 id="wonders-list-heading">Current Wonders</h2>
+        <h2 id="wonders-list-heading">Current Natural Wonders</h2>
         <table>
-          <caption>Saved World Wonders</caption>
+          <caption>Saved Natural Wonders</caption>
           <thead>
             <tr>
               <th scope="col">Name</th>
-              <th scope="col">Age</th>
-              <th scope="col">Owner</th>
-              <th scope="col">Big Ticket</th>
+              <th scope="col">Tiles</th>
+              <th scope="col">Terrain</th>
+              <th scope="col">Controller</th>
               <th scope="col">Icon &amp; Actions</th>
             </tr>
           </thead>
           <tbody id="wonders-table-body"></tbody>
         </table>
-        <button type="button" class="primary" id="new-wonder">New Wonder</button>
+        <button type="button" class="primary" id="new-wonder">New Natural Wonder</button>
       </section>
 
       <section class="panel" aria-labelledby="editor-heading">
-        <h2 id="editor-heading">Wonder Details</h2>
+        <h2 id="editor-heading">Natural Wonder Details</h2>
         <form id="wonder-form" novalidate>
           <label for="wonder-id">ID</label>
           <input id="wonder-id" name="id" type="text" required autocomplete="off" aria-describedby="id-help">
-          <small id="id-help">Use a unique identifier such as <code>pyramids</code>.</small>
+          <small id="id-help">Use a unique identifier such as <code>grand-canyon</code>.</small>
 
           <label for="wonder-name">Name</label>
           <input id="wonder-name" name="name" type="text" required autocomplete="off">
 
-          <label for="wonder-age">Age</label>
-          <select id="wonder-age" name="age" required>
-            <option value="" disabled selected>Select age</option>
-          </select>
-
-          <label for="wonder-icon-url">Icon URL</label>
+          <label for="wonder-icon-url">Screenshot/Icon URL (Optional)</label>
           <input id="wonder-icon-url" name="iconUrl" type="text" autocomplete="off" placeholder="Paste an image URL or use upload">
           <input id="wonder-icon-file" name="iconFile" type="file" accept="image/*">
           <div id="wonder-icon-preview" aria-live="polite" aria-label="Icon preview" role="img"></div>
-          <small>Icon previews come from the provided URL or uploaded image. TODO: replace with global icon picker.</small>
+          <small>Upload in-game screenshots as you discover them</small>
 
-          <h3>Production & Associated Civilization</h3>
-          <label for="wonder-production-cost">Production Cost</label>
-          <input id="wonder-production-cost" name="productionCost" type="number" min="0" placeholder="450">
-          <small>Total production cost to build this wonder</small>
+          <h3>Physical Characteristics</h3>
+          <label for="wonder-tile-count">Tile Count</label>
+          <select id="wonder-tile-count" name="tileCount" required>
+            <option value="1">1 Tile</option>
+            <option value="2">2 Tiles</option>
+            <option value="3">3 Tiles</option>
+            <option value="4">4 Tiles</option>
+            <option value="5">5 Tiles</option>
+            <option value="6">6 Tiles</option>
+          </select>
 
-          <label for="wonder-associated-civ">Associated Civilization</label>
-          <input id="wonder-associated-civ" name="associatedCiv" type="text" autocomplete="off" placeholder="Start typing civilization name...">
-          <small>Associated civ (also gets +30% production bonus and may have specific unlock)</small>
+          <label for="wonder-terrain-type">Terrain Type</label>
+          <input id="wonder-terrain-type" name="terrainType" type="text" autocomplete="off" placeholder="e.g., Mountain, Desert, Coast">
+          <small>The primary terrain type (Mountain, Desert, Coast, etc.)</small>
 
-          <h3>Unlock Requirements</h3>
-          <label for="wonder-unlock">Research Required to Unlock</label>
-          <input id="wonder-unlock" name="unlock" type="text" autocomplete="off" placeholder="Start typing civic/tech name...">
-          <small>Technology or Civic that unlocks this wonder for all civilizations</small>
+          <label for="wonder-continent">Continent (Optional)</label>
+          <input id="wonder-continent" name="continent" type="text" autocomplete="off" placeholder="e.g., Africa, South America">
+          <small>Where this natural wonder is located</small>
 
-          <label for="wonder-civ-specific-unlock-civic">Civilization Specific Unlock (Optional)</label>
-          <input id="wonder-civ-specific-unlock-civic" name="civSpecificUnlockCivic" type="text" autocomplete="off" placeholder="Start typing civic name...">
-          <small>Alternative civic that unlocks this wonder for the associated civilization</small>
-
-          <h3>Placement & Effects</h3>
-          <label for="wonder-placement">Placement Requirements</label>
-          <input id="wonder-placement" name="placement" type="text" placeholder="e.g., On a Flat Tile">
-          <small>Text description of placement requirements</small>
-
-          <label>Effects</label>
+          <h3>Effects</h3>
+          <label>Natural Wonder Bonuses</label>
           <div id="wonder-effects-container">
             <!-- Effects will be added dynamically here -->
           </div>
           <button type="button" class="secondary" id="add-effect-button">+ Add Effect</button>
-          <small>List of distinct effects/bonuses for this wonder</small>
+          <small>Bonuses provided by tiles of this natural wonder</small>
 
-          <h3>Ownership</h3>
-          <label for="wonder-owner-type">Last Owner</label>
-          <select id="wonder-owner-type" name="ownerType">
-            <option value="">No owner yet</option>
+          <h3>Discovery & Control</h3>
+          <label for="wonder-discovered-age">Discovered Age</label>
+          <select id="wonder-discovered-age" name="discoveredAge">
+            <option value="">Not yet discovered</option>
+            <option value="Antiquity">Antiquity</option>
+            <option value="Exploration">Exploration</option>
+            <option value="Modern">Modern</option>
+          </select>
+
+          <label for="wonder-controller-role">Controller</label>
+          <select id="wonder-controller-role" name="controllerRole">
+            <option value="">No controller yet</option>
             <option value="Tiny">Tiny</option>
             <option value="Steve">Steve</option>
             <option value="AI">AI</option>
           </select>
-          <small>Set during gameplay - not required for initial entry</small>
+          <small>Current overall controller (set during gameplay)</small>
 
-          <label for="wonder-owner-leader">Owner Leader</label>
-          <input id="wonder-owner-leader" name="ownerLeader" type="text" autocomplete="off" placeholder="Start typing leader name...">
-          <small>Type to filter and select from database</small>
+          <label for="wonder-controller-leader">Controller Leader</label>
+          <input id="wonder-controller-leader" name="controllerLeader" type="text" autocomplete="off" placeholder="Start typing leader name...">
 
-          <label for="wonder-owner-civ">Owner Civilization</label>
-          <input id="wonder-owner-civ" name="ownerCiv" type="text" autocomplete="off" placeholder="Start typing civilization name...">
-          <small>Type to filter and select from database</small>
+          <label for="wonder-controller-civ">Controller Civilization</label>
+          <input id="wonder-controller-civ" name="controllerCiv" type="text" autocomplete="off" placeholder="Start typing civilization name...">
 
-          <label class="checkbox-label">
-            <input type="checkbox" id="wonder-bigTicket" name="bigTicket"> Big Ticket Wonder
-          </label>
-
-          <h3>Ownership History</h3>
-          <ul class="history-list" id="ownership-history"></ul>
-          <button type="button" class="secondary" id="log-owner">Log current as last owner</button>
+          <h3>Tile Ownership (Split Control)</h3>
+          <div class="tile-inputs">
+            <div class="tile-input-group">
+              <label for="tiles-tiny">Tiny's Tiles</label>
+              <input id="tiles-tiny" name="tilesTiny" type="number" min="0" max="6" value="0">
+            </div>
+            <div class="tile-input-group">
+              <label for="tiles-steve">Steve's Tiles</label>
+              <input id="tiles-steve" name="tilesSteve" type="number" min="0" max="6" value="0">
+            </div>
+            <div class="tile-input-group">
+              <label for="tiles-ai">AI's Tiles</label>
+              <input id="tiles-ai" name="tilesAI" type="number" min="0" max="6" value="0">
+            </div>
+          </div>
+          <small>Track individual tile ownership (useful when split between players)</small>
 
           <div class="form-actions">
-            <button type="submit" class="primary">Save Wonder</button>
+            <button type="submit" class="primary">Save Natural Wonder</button>
             <button type="button" class="secondary" id="reset-form">Reset</button>
+            <button type="button" class="danger" id="clear-stats">Clear Game Stats</button>
           </div>
         </form>
       </section>
     </div>
 
-    <section class="panel ownership-summary" aria-labelledby="ownership-summary-heading">
-      <h2 id="ownership-summary-heading">Ownership Summary</h2>
-      <table>
-        <caption>Total Wonders per Owner</caption>
-        <thead>
-          <tr>
-            <th scope="col">Owner</th>
-            <th scope="col">Count</th>
-          </tr>
-        </thead>
-        <tbody id="ownership-summary-body"></tbody>
-      </table>
-    </section>
-
     <section class="panel data-tools" aria-labelledby="data-tools-heading">
       <h2 id="data-tools-heading">Import / Export</h2>
-      <p>Copy data to share or paste JSON to replace your current World Wonders. Use the <a href="docs/data/worldWonders-sample.json">sample JSON</a> as a reference.</p>
+      <p>Copy data to share or paste JSON to replace your current Natural Wonders.</p>
       <div class="form-actions">
         <button type="button" class="primary" id="export-button">Export JSON</button>
         <button type="button" class="secondary" id="import-button">Import JSON</button>
-        <button type="button" class="secondary" id="load-sample">Load sample data</button>
-        <button type="button" class="danger" id="clear-all">Clear all Wonders</button>
+        <button type="button" class="danger" id="clear-all">Delete All Natural Wonders</button>
       </div>
-      <textarea id="json-data" aria-label="World Wonders JSON" placeholder="Paste World Wonders JSON here" spellcheck="false" rows="8"></textarea>
+      <textarea id="json-data" aria-label="Natural Wonders JSON" placeholder="Paste Natural Wonders JSON here" spellcheck="false" rows="8"></textarea>
     </section>
   </main>
   <footer>© CIV7 Tracker</footer>
@@ -287,7 +279,8 @@
   <script src="js/store-supabase.js"></script>
   <!-- Load autocomplete component -->
   <script src="js/autocomplete.js"></script>
-  <script src="js/data-wonders.js"></script>
+  <script src="js/data-natural-wonders.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
+
