--- a/data-natural-wonders.html
+++ b/data-natural-wonders.html
@@ -209,7 +209,7 @@
           <button type="button" class="secondary" id="add-effect-button">+ Add Effect</button>
           <small>Bonuses provided by tiles of this natural wonder</small>
 
-          <h3>Discovery & Control</h3>
+          <h3>Discovery &amp; Control</h3>
           <label for="wonder-discovered-age">Discovered Age</label>
           <select id="wonder-discovered-age" name="discoveredAge">
             <option value="">Not yet discovered</option>
