--- a/data-tech-civics.html
+++ b/data-tech-civics.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>CIV7 Tracker · Technologies & Civics</title>
+  <title>CIV7 Tracker · Technologies &amp; Civics</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -140,7 +140,7 @@
     <a href="data-social-policies.html">Social Policies Editor</a>
   </nav>
   <main>
-    <h1>Technologies & Civics Data Editor</h1>
+    <h1>Technologies &amp; Civics Data Editor</h1>
     <p>Manage Civilization VII Technologies and Civics. Track effects, unlocks, social policies, and civ-specific variants.</p>
 
     <section class="status-region" aria-live="polite" id="status-message" role="status" data-tone="info">Ready to add a new Technology or Civic.</section>
@@ -154,7 +154,7 @@
         </div>
         <h2 id="items-list-heading">Current Items</h2>
         <table>
-          <caption>Saved Technologies & Civics</caption>
+          <caption>Saved Technologies &amp; Civics</caption>
           <thead>
             <tr>
               <th scope="col">Name</th>
