--- a/data-wonders.html
+++ b/data-wonders.html
@@ -188,7 +188,7 @@
           <div id="wonder-icon-preview" aria-live="polite" aria-label="Icon preview" role="img"></div>
           <small>Icon previews come from the provided URL or uploaded image. TODO: replace with global icon picker.</small>
 
-          <h3>Production & Associated Civilization</h3>
+          <h3>Production &amp; Associated Civilization</h3>
           <label for="wonder-production-cost">Production Cost</label>
           <input id="wonder-production-cost" name="productionCost" type="number" min="0" placeholder="450">
           <small>Total production cost to build this wonder</small>
@@ -206,7 +206,7 @@
           <input id="wonder-civ-specific-unlock-civic" name="civSpecificUnlockCivic" type="text" autocomplete="off" placeholder="Start typing civic name...">
           <small>Alternative civic that unlocks this wonder for the associated civilization</small>
 
-          <h3>Placement & Effects</h3>
+          <h3>Placement &amp; Effects</h3>
           <label for="wonder-placement">Placement Requirements</label>
           <input id="wonder-placement" name="placement" type="text" placeholder="e.g., On a Flat Tile">
           <small>Text description of placement requirements</small>
