--- a/data-civilizations.html
+++ b/data-civilizations.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>CIV7 Tracker · World Wonders</title>
+  <title>CIV7 Tracker · Civilizations</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#001a33">
-  <meta name="description" content="Edit Civilization VII World Wonders data.">
-  <meta property="og:title" content="CIV7 Tracker · World Wonders">
-  <meta property="og:description" content="Maintain Civilization VII World Wonders data.">
-  <meta property="og:url" content="https://sjones321.github.io/civ7-tracker/data-wonders.html">
+  <meta name="description" content="Edit Civilization VII Civilizations data.">
+  <meta property="og:title" content="CIV7 Tracker · Civilizations">
+  <meta property="og:description" content="Maintain Civilization VII Civilizations data.">
+  <meta property="og:url" content="https://sjones321.github.io/civ7-tracker/data-civilizations.html">
   <meta property="og:image" content="https://sjones321.github.io/civ7-tracker/img/og-card.png">
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin:0; background:#f5f7fa; color:#102542; }
@@ -33,6 +33,7 @@
     form label { display:block; font-weight:600; margin-top:12px; }
     form small { display:block; margin-top:4px; color:#52606d; }
     form input[type="text"],
+    form input[type="number"],
     form textarea,
     form select { width:100%; padding:8px; border:1px solid #bcccdc; border-radius:4px; font-size:1rem; }
     form textarea { min-height:72px; }
@@ -47,16 +48,14 @@
     .status-region[data-tone="error"] { background:#fde8e8; border-color:#f56565; color:#9b2c2c; }
     .icon-display { display:inline-block; min-width:1.5rem; margin-right:8px; text-align:center; }
     .icon-display img { width:40px; height:40px; object-fit:contain; border:1px solid #bcccdc; border-radius:4px; padding:2px; background:#fff; }
-    #wonder-icon-preview { margin-top:8px; min-height:60px; display:flex; align-items:center; justify-content:flex-start; }
-    #wonder-icon-preview img { max-width:72px; max-height:72px; border:1px solid #bcccdc; border-radius:4px; padding:4px; background:#fff; }
-    #wonder-icon-preview span { color:#52606d; }
-    .history-list { margin-top:12px; padding-left:20px; }
-    .history-list li { margin-bottom:4px; }
-    #log-owner { margin-top:8px; }
+    #civ-icon-preview { margin-top:8px; min-height:60px; display:flex; align-items:center; justify-content:flex-start; }
+    #civ-icon-preview img { max-width:72px; max-height:72px; border:1px solid #bcccdc; border-radius:4px; padding:4px; background:#fff; }
+    #civ-icon-preview span { color:#52606d; }
+    #new-civ { margin-top:12px; }
     .data-tools textarea { margin-top:12px; width:100%; padding:8px; border:1px solid #bcccdc; border-radius:4px; font-family:monospace; font-size:0.9rem; background:#f8fafc; color:#102542; }
-    .ownership-summary { max-width:340px; }
-    #new-wonder { margin-top:12px; }
-    /* Autocomplete dropdown styling */
+    .building-quarter-toggle { margin-top:16px; padding:12px; background:#f8fafc; border:1px solid #d9e2ec; border-radius:4px; }
+    .building-fields, .quarter-fields { margin-top:8px; }
+    .quarter-fields { display:none; }
     .autocomplete-dropdown { 
       position: absolute !important;
       background: #fff !important;
@@ -134,148 +133,135 @@
   </header>
   <nav>
     <a href="./">Home</a>
-    <a href="data-wonders.html" aria-current="page">World Wonders Editor</a>
+    <a href="data-wonders.html">World Wonders Editor</a>
     <a href="data-leaders.html">Leaders Editor</a>
-    <a href="data-civilizations.html">Civilizations Editor</a>
+    <a href="data-civilizations.html" aria-current="page">Civilizations Editor</a>
     <a href="data-tech-civics.html">Tech/Civics Editor</a>
     <a href="data-natural-wonders.html">Natural Wonders Editor</a>
     <a href="data-mementos.html">Mementos Editor</a>
     <a href="data-social-policies.html">Social Policies Editor</a>
   </nav>
   <main>
-    <h1>World Wonders Data Editor</h1>
-    <p>Manage Civilization VII World Wonders locally in your browser. Changes are stored in <code>localStorage</code> and survive refreshes.</p>
+    <h1>Civilizations Data Editor</h1>
+    <p>Manage Civilization VII Civilizations. Track unique units, buildings, quarters, civics, and effects for each civilization.</p>
 
-    <section class="status-region" aria-live="polite" id="status-message" role="status" data-tone="info">Ready to add a new World Wonder.</section>
+    <section class="status-region" aria-live="polite" id="status-message" role="status" data-tone="info">Ready to add a new Civilization.</section>
 
     <div class="layout">
-      <section class="panel" aria-labelledby="wonders-list-heading">
-        <h2 id="wonders-list-heading">Current Wonders</h2>
+      <section class="panel" aria-labelledby="civs-list-heading">
+        <h2 id="civs-list-heading">Current Civilizations</h2>
         <table>
-          <caption>Saved World Wonders</caption>
+          <caption>Saved Civilizations</caption>
           <thead>
             <tr>
               <th scope="col">Name</th>
               <th scope="col">Age</th>
-              <th scope="col">Owner</th>
-              <th scope="col">Big Ticket</th>
               <th scope="col">Icon &amp; Actions</th>
             </tr>
           </thead>
-          <tbody id="wonders-table-body"></tbody>
+          <tbody id="civs-table-body"></tbody>
         </table>
-        <button type="button" class="primary" id="new-wonder">New Wonder</button>
+        <button type="button" class="primary" id="new-civ">New Civilization</button>
       </section>
 
       <section class="panel" aria-labelledby="editor-heading">
-        <h2 id="editor-heading">Wonder Details</h2>
-        <form id="wonder-form" novalidate>
-          <label for="wonder-id">ID</label>
-          <input id="wonder-id" name="id" type="text" required autocomplete="off" aria-describedby="id-help">
-          <small id="id-help">Use a unique identifier such as <code>pyramids</code>.</small>
+        <h2 id="editor-heading">Civilization Details</h2>
+        <form id="civ-form" novalidate>
+          <label for="civ-id">ID</label>
+          <input id="civ-id" name="id" type="text" required autocomplete="off" aria-describedby="id-help">
+          <small id="id-help">Use a unique identifier such as <code>rome</code> or <code>civ:rome</code>.</small>
 
-          <label for="wonder-name">Name</label>
-          <input id="wonder-name" name="name" type="text" required autocomplete="off">
+          <label for="civ-name">Name</label>
+          <input id="civ-name" name="name" type="text" required autocomplete="off">
 
-          <label for="wonder-age">Age</label>
-          <select id="wonder-age" name="age" required>
+          <label for="civ-age">Age</label>
+          <select id="civ-age" name="age" required>
             <option value="" disabled selected>Select age</option>
+            <option value="Antiquity">Antiquity</option>
+            <option value="Exploration">Exploration</option>
+            <option value="Modern">Modern</option>
           </select>
 
-          <label for="wonder-icon-url">Icon URL</label>
-          <input id="wonder-icon-url" name="iconUrl" type="text" autocomplete="off" placeholder="Paste an image URL or use upload">
-          <input id="wonder-icon-file" name="iconFile" type="file" accept="image/*">
-          <div id="wonder-icon-preview" aria-live="polite" aria-label="Icon preview" role="img"></div>
-          <small>Icon previews come from the provided URL or uploaded image. TODO: replace with global icon picker.</small>
+          <label for="civ-icon-url">Icon URL</label>
+          <input id="civ-icon-url" name="iconUrl" type="text" autocomplete="off" placeholder="Paste an image URL or use upload">
+          <input id="civ-icon-file" name="iconFile" type="file" accept="image/*">
+          <div id="civ-icon-preview" aria-live="polite" aria-label="Icon preview" role="img"></div>
+          <small>Icon previews come from the provided URL or uploaded image.</small>
 
-          <h3>Production &amp; Associated Civilization</h3>
-          <label for="wonder-production-cost">Production Cost</label>
-          <input id="wonder-production-cost" name="productionCost" type="number" min="0" placeholder="450">
-          <small>Total production cost to build this wonder</small>
+          <h3>Unique Units</h3>
+          <label for="civ-unit-military-1">Military Unit 1</label>
+          <input id="civ-unit-military-1" name="unitMilitary1" type="text" autocomplete="off" placeholder="Enter unit name...">
 
-          <label for="wonder-associated-civ">Associated Civilization</label>
-          <input id="wonder-associated-civ" name="associatedCiv" type="text" autocomplete="off" placeholder="Start typing civilization name...">
-          <small>Associated civ (also gets +30% production bonus and may have specific unlock)</small>
+          <label for="civ-unit-military-2">Military Unit 2 (Optional)</label>
+          <input id="civ-unit-military-2" name="unitMilitary2" type="text" autocomplete="off" placeholder="Enter unit name...">
 
-          <h3>Unlock Requirements</h3>
-          <label for="wonder-unlock">Research Required to Unlock</label>
-          <input id="wonder-unlock" name="unlock" type="text" autocomplete="off" placeholder="Start typing civic/tech name...">
-          <small>Technology or Civic that unlocks this wonder for all civilizations</small>
+          <label for="civ-unit-civilian">Civilian/Commander Unit</label>
+          <input id="civ-unit-civilian" name="unitCivilian" type="text" autocomplete="off" placeholder="Enter unit name...">
+          <small>Unique units for this civilization</small>
 
-          <label for="wonder-civ-specific-unlock-civic">Civilization Specific Unlock (Optional)</label>
-          <input id="wonder-civ-specific-unlock-civic" name="civSpecificUnlockCivic" type="text" autocomplete="off" placeholder="Start typing civic name...">
-          <small>Alternative civic that unlocks this wonder for the associated civilization</small>
+          <h3>Unique Building/Quarter</h3>
+          <div class="building-quarter-toggle">
+            <label class="checkbox-label">
+              <input type="checkbox" id="is-quarter" name="isQuarter">
+              This is a Quarter (2 buildings)
+            </label>
 
-          <h3>Placement &amp; Effects</h3>
-          <label for="wonder-placement">Placement Requirements</label>
-          <input id="wonder-placement" name="placement" type="text" placeholder="e.g., On a Flat Tile">
-          <small>Text description of placement requirements</small>
+            <div class="building-fields" id="building-fields">
+              <label for="civ-building">Unique Building</label>
+              <input id="civ-building" name="building" type="text" autocomplete="off" placeholder="Enter building name...">
+            </div>
 
-          <label>Effects</label>
-          <div id="wonder-effects-container">
+            <div class="quarter-fields" id="quarter-fields">
+              <label for="civ-quarter-name">Quarter Name</label>
+              <input id="civ-quarter-name" name="quarterName" type="text" autocomplete="off" placeholder="Enter quarter name...">
+
+              <label for="civ-quarter-building-1">Building 1</label>
+              <input id="civ-quarter-building-1" name="quarterBuilding1" type="text" autocomplete="off" placeholder="Enter building name...">
+
+              <label for="civ-quarter-building-2">Building 2</label>
+              <input id="civ-quarter-building-2" name="quarterBuilding2" type="text" autocomplete="off" placeholder="Enter building name...">
+            </div>
+          </div>
+          <small>Unique building or quarter (combination of 2 buildings)</small>
+
+          <h3>Effects</h3>
+          <label>Civilization Bonuses</label>
+          <div id="civ-effects-container">
             <!-- Effects will be added dynamically here -->
           </div>
           <button type="button" class="secondary" id="add-effect-button">+ Add Effect</button>
-          <small>List of distinct effects/bonuses for this wonder</small>
+          <small>List of passive bonuses and abilities</small>
 
-          <h3>Ownership</h3>
-          <label for="wonder-owner-type">Last Owner</label>
-          <select id="wonder-owner-type" name="ownerType">
-            <option value="">No owner yet</option>
-            <option value="Tiny">Tiny</option>
-            <option value="Steve">Steve</option>
-            <option value="AI">AI</option>
-          </select>
-          <small>Set during gameplay - not required for initial entry</small>
+          <h3>Unique Civics</h3>
+          <label>Civilization-Specific Civics</label>
+          <div id="civ-civics-container">
+            <!-- Civics will be added dynamically here -->
+          </div>
+          <button type="button" class="secondary" id="add-civic-button">+ Add Unique Civic</button>
+          <small>Civics that are unique to this civilization</small>
 
-          <label for="wonder-owner-leader">Owner Leader</label>
-          <input id="wonder-owner-leader" name="ownerLeader" type="text" autocomplete="off" placeholder="Start typing leader name...">
-          <small>Type to filter and select from database</small>
-
-          <label for="wonder-owner-civ">Owner Civilization</label>
-          <input id="wonder-owner-civ" name="ownerCiv" type="text" autocomplete="off" placeholder="Start typing civilization name...">
-          <small>Type to filter and select from database</small>
-
-          <label class="checkbox-label">
-            <input type="checkbox" id="wonder-bigTicket" name="bigTicket"> Big Ticket Wonder
-          </label>
-
-          <h3>Ownership History</h3>
-          <ul class="history-list" id="ownership-history"></ul>
-          <button type="button" class="secondary" id="log-owner">Log current as last owner</button>
+          <h3>Associated Wonder</h3>
+          <label for="civ-wonder">Wonder (Optional)</label>
+          <input id="civ-wonder" name="wonder" type="text" autocomplete="off" placeholder="Start typing wonder name...">
+          <small>The wonder that gives this civ a +30% production bonus</small>
 
           <div class="form-actions">
-            <button type="submit" class="primary">Save Wonder</button>
+            <button type="submit" class="primary">Save Civilization</button>
             <button type="button" class="secondary" id="reset-form">Reset</button>
           </div>
         </form>
       </section>
     </div>
 
-    <section class="panel ownership-summary" aria-labelledby="ownership-summary-heading">
-      <h2 id="ownership-summary-heading">Ownership Summary</h2>
-      <table>
-        <caption>Total Wonders per Owner</caption>
-        <thead>
-          <tr>
-            <th scope="col">Owner</th>
-            <th scope="col">Count</th>
-          </tr>
-        </thead>
-        <tbody id="ownership-summary-body"></tbody>
-      </table>
-    </section>
-
     <section class="panel data-tools" aria-labelledby="data-tools-heading">
       <h2 id="data-tools-heading">Import / Export</h2>
-      <p>Copy data to share or paste JSON to replace your current World Wonders. Use the <a href="docs/data/worldWonders-sample.json">sample JSON</a> as a reference.</p>
+      <p>Copy data to share or paste JSON to replace your current Civilizations.</p>
       <div class="form-actions">
         <button type="button" class="primary" id="export-button">Export JSON</button>
         <button type="button" class="secondary" id="import-button">Import JSON</button>
-        <button type="button" class="secondary" id="load-sample">Load sample data</button>
-        <button type="button" class="danger" id="clear-all">Clear all Wonders</button>
+        <button type="button" class="danger" id="clear-all">Delete All Civilizations</button>
       </div>
-      <textarea id="json-data" aria-label="World Wonders JSON" placeholder="Paste World Wonders JSON here" spellcheck="false" rows="8"></textarea>
+      <textarea id="json-data" aria-label="Civilizations JSON" placeholder="Paste Civilizations JSON here" spellcheck="false" rows="8"></textarea>
     </section>
   </main>
   <footer>© CIV7 Tracker</footer>
@@ -287,7 +273,8 @@
   <script src="js/store-supabase.js"></script>
   <!-- Load autocomplete component -->
   <script src="js/autocomplete.js"></script>
-  <script src="js/data-wonders.js"></script>
+  <script src="js/data-civilizations.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
+
